--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "bootstrap"
     ],
     "license": "MIT",
-    "homepage": "https://github.com/simov/express-admin",
+    "homepage": "https://github.com/lyuehh/express-admin",
     "author": "Simeon Velichkov <simeonvelichkov@gmail.com> (https://simov.github.io)",
     "repository": {
         "type": "git",
-        "url": "https://github.com/simov/express-admin.git"
+        "url": "https://github.com/lyuehh/express-admin.git"
     },
     "dependencies": {
         "express": "^4.16.3",
